# embedding-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
embedding-api/: main.py
embedding-api/tests/: test_embedding_api.py
model-service/: main.py
model-service/tests/: test_model_service.py
monitoring/grafana/provisioning/dashboards/: api-monitoring.json  dashboards.yml  model-monitoring.json
monitoring/prometheus/: prometheus.yml
src/embedding_api/: config.py  data_models.py  logger.py  main.py  metrics.py  services.py
tests/: conftest.py  test_embedding_api.py
