[project]
name = "embedding-api"
version = "0.1.0"
description = "API for embedding model"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.0,<0.136.0)",
    "optimum-onnx (>=0.1.0,<0.2.0)",
    "onnxruntime (>=1.20.0,<2.0.0)",
    "httpx (>=0.28.0,<1.0.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
pythonVersion = "3.13"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
pyright = "^1.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
